# JIMP

./: .gitignore  CMakeLists.txt  Makefile  README.md  licenseheader  main.cpp  makefile  makeout.txt  out.txt
JG/: Button.cpp  CMakeLists.txt  Canvas.cpp  Events.cpp  Makefile  Panel.cpp  Shape.cpp  Widget.cpp  Window.cpp  makefile
JG/includes/: Device.h  Events.h  JG.h  JGversion.h  Shape.h  Vector2i.h  Widget.h  Window.h  __JGDebug.h
UI/: Spline.h  UI.h  Vista.h  VistaButton.h  VistaMenu.h  VistaPanel.h  VistaSlider.h  VistaTextBox.h  tnd.h
common/: colors.cpp  messages.cpp
editor/: Editor.cpp  Layer.cpp  LayerSwitcher.cpp  Palette.cpp  Tool.cpp  ToolPicker.cpp
file/: BMP.cpp  sfimg.cpp
includes/common/: colors.h  messages.h
includes/editor/: Curves.h  Editor.h  Layer.h  LayerSwitcher.h  Palette.h  Tool.h  ToolPicker.h
includes/file/: bmpheader.h  formats.h  sfimg.h
includes/plugins/: sdk.h
plugins/: Effect.cpp  Plugin.cpp  Tool.cpp  api.cpp  appinterface.cpp
